[package]
name = "async_demo"
version = "0.1.0"
authors = ["Krzysztof Sierpinski <krzysztof.sierpinski@wp.com>"]
edition = "2018"

[lib]
name = "benchmark"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.15"
reqwest = "0.11.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.64"
textplots = "0.6.0"
tokio = { version = "1.6.1", features = ["full"] }
